// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneratedMarkdownDocs Unit Tests Multi 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
",
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
      },
      "default": Object {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  "markdown/.openapi-generator-ignore": "# OpenAPI Generator Ignore
# Generated by openapi-generator https://github.com/openapitools/openapi-generator

# Use this file to prevent files from being overwritten by the generator.
# The patterns follow closely to .gitignore or .dockerignore.

# As an example, the C# client generator defines ApiClient.cs.
# You can make changes and tell OpenAPI Generator to ignore just this file by uncommenting the following line:
#ApiClient.cs

# You can match any string of characters against a directory, file or extension with a single asterisk (*):
#foo/*/qux
# The above matches foo/bar/qux and foo/baz/qux, but not foo/bar/baz/qux

# You can recursively match patterns against a directory, file or extension with a double asterisk (**):
#foo/**/qux
# This matches foo/bar/qux, foo/baz/qux, and foo/bar/baz/qux

# You can also negate patterns with an exclamation (!).
# For example, you can ignore all files in a docs folder with the file extension .md:
#docs/*.md
# Then explicitly reverse the ignore rule for a single file:
#!docs/README.md
",
  "markdown/.openapi-generator/FILES": ".openapi-generator-ignore
Apis/DefaultApi.md
Models/ApiError.md
Models/TestRequest.md
Models/TestResponse.md
Models/TestResponse_messages_inner.md
README.md
",
  "markdown/.openapi-generator/VERSION": "6.3.0",
  "markdown/Apis/DefaultApi.md": "# DefaultApi

All URIs are relative to *http://localhost*

| Method | HTTP request | Description |
|------------- | ------------- | -------------|
| [**someTestOperation**](DefaultApi.md#someTestOperation) | **POST** /operation/{pathParam} |  |


<a name=\\"someTestOperation\\"></a>
# **someTestOperation**
> TestResponse someTestOperation(pathParam, TestRequest)



### Parameters

|Name | Type | Description  | Notes |
|------------- | ------------- | ------------- | -------------|
| **pathParam** | **String**|  | [default to null] |
| **TestRequest** | [**TestRequest**](../Models/TestRequest.md)|  | |

### Return type

[**TestResponse**](../Models/TestResponse.md)

### Authorization

No authorization required

### HTTP request headers

- **Content-Type**: application/json
- **Accept**: application/json

",
  "markdown/Models/ApiError.md": "# ApiError
## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
| **errorMessage** | **String** |  | [default to null] |

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

",
  "markdown/Models/TestRequest.md": "# TestRequest
## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
| **myInput** | **BigDecimal** |  | [optional] [default to null] |

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

",
  "markdown/Models/TestResponse.md": "# TestResponse
## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
| **messages** | [**List**](TestResponse_messages_inner.md) |  | [default to null] |

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

",
  "markdown/Models/TestResponse_messages_inner.md": "# TestResponse_messages_inner
## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
| **message** | **String** |  | [optional] [default to null] |
| **id** | **Integer** |  | [default to null] |

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

",
  "markdown/README.md": "# Documentation for Example API

<a name=\\"documentation-for-api-endpoints\\"></a>
## Documentation for API Endpoints

All URIs are relative to *http://localhost*

| Class | Method | HTTP request | Description |
|------------ | ------------- | ------------- | -------------|
| *DefaultApi* | [**someTestOperation**](Apis/DefaultApi.md#sometestoperation) | **POST** /operation/{pathParam} |  |


<a name=\\"documentation-for-models\\"></a>
## Documentation for Models

 - [ApiError](./Models/ApiError.md)
 - [TestRequest](./Models/TestRequest.md)
 - [TestResponse](./Models/TestResponse.md)
 - [TestResponse_messages_inner](./Models/TestResponse_messages_inner.md)


<a name=\\"documentation-for-authorization\\"></a>
## Documentation for Authorization

All endpoints do not require authorization.
",
}
`;

exports[`GeneratedMarkdownDocs Unit Tests Single 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
",
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
      },
      "default": Object {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  "markdown/.openapi-generator-ignore": "# OpenAPI Generator Ignore
# Generated by openapi-generator https://github.com/openapitools/openapi-generator

# Use this file to prevent files from being overwritten by the generator.
# The patterns follow closely to .gitignore or .dockerignore.

# As an example, the C# client generator defines ApiClient.cs.
# You can make changes and tell OpenAPI Generator to ignore just this file by uncommenting the following line:
#ApiClient.cs

# You can match any string of characters against a directory, file or extension with a single asterisk (*):
#foo/*/qux
# The above matches foo/bar/qux and foo/baz/qux, but not foo/bar/baz/qux

# You can recursively match patterns against a directory, file or extension with a double asterisk (**):
#foo/**/qux
# This matches foo/bar/qux, foo/baz/qux, and foo/bar/baz/qux

# You can also negate patterns with an exclamation (!).
# For example, you can ignore all files in a docs folder with the file extension .md:
#docs/*.md
# Then explicitly reverse the ignore rule for a single file:
#!docs/README.md
",
  "markdown/.openapi-generator/FILES": ".openapi-generator-ignore
Apis/DefaultApi.md
Models/ApiError.md
Models/TestRequest.md
Models/TestResponse.md
Models/TestResponse_messages_inner.md
README.md
",
  "markdown/.openapi-generator/VERSION": "6.3.0",
  "markdown/Apis/DefaultApi.md": "# DefaultApi

All URIs are relative to *http://localhost*

| Method | HTTP request | Description |
|------------- | ------------- | -------------|
| [**anyRequestResponse**](DefaultApi.md#anyRequestResponse) | **PUT** /any-request-response |  |
| [**empty**](DefaultApi.md#empty) | **PUT** /empty-response |  |
| [**mediaTypes**](DefaultApi.md#mediaTypes) | **POST** /different-media-type |  |
| [**operationOne**](DefaultApi.md#operationOne) | **POST** /path/{pathParam} |  |
| [**withoutOperationIdDelete**](DefaultApi.md#withoutOperationIdDelete) | **DELETE** /without-operation-id |  |


<a name=\\"anyRequestResponse\\"></a>
# **anyRequestResponse**
> oas_any_type_not_mapped anyRequestResponse(body)



### Parameters

|Name | Type | Description  | Notes |
|------------- | ------------- | ------------- | -------------|
| **body** | **oas_any_type_not_mapped**|  | [optional] |

### Return type

[**oas_any_type_not_mapped**](../Models/AnyType.md)

### Authorization

No authorization required

### HTTP request headers

- **Content-Type**: application/json
- **Accept**: application/json

<a name=\\"empty\\"></a>
# **empty**
> empty()



### Parameters
This endpoint does not need any parameter.

### Return type

null (empty response body)

### Authorization

No authorization required

### HTTP request headers

- **Content-Type**: Not defined
- **Accept**: Not defined

<a name=\\"mediaTypes\\"></a>
# **mediaTypes**
> String mediaTypes(body)



### Parameters

|Name | Type | Description  | Notes |
|------------- | ------------- | ------------- | -------------|
| **body** | **File**|  | |

### Return type

**String**

### Authorization

No authorization required

### HTTP request headers

- **Content-Type**: application/pdf
- **Accept**: application/x-mpegurl

<a name=\\"operationOne\\"></a>
# **operationOne**
> TestResponse operationOne(param1, param2, param3, pathParam, TestRequest, param4)



### Parameters

|Name | Type | Description  | Notes |
|------------- | ------------- | ------------- | -------------|
| **param1** | **String**|  | [default to null] |
| **param2** | [**List**](../Models/String.md)|  | [default to null] |
| **param3** | **BigDecimal**|  | [default to null] |
| **pathParam** | **String**|  | [default to null] |
| **TestRequest** | [**TestRequest**](../Models/TestRequest.md)|  | |
| **param4** | **String**|  | [optional] [default to null] |

### Return type

[**TestResponse**](../Models/TestResponse.md)

### Authorization

No authorization required

### HTTP request headers

- **Content-Type**: application/json
- **Accept**: application/json

<a name=\\"withoutOperationIdDelete\\"></a>
# **withoutOperationIdDelete**
> TestResponse withoutOperationIdDelete()



### Parameters
This endpoint does not need any parameter.

### Return type

[**TestResponse**](../Models/TestResponse.md)

### Authorization

No authorization required

### HTTP request headers

- **Content-Type**: Not defined
- **Accept**: application/json

",
  "markdown/Models/ApiError.md": "# ApiError
## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
| **errorMessage** | **String** |  | [default to null] |

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

",
  "markdown/Models/TestRequest.md": "# TestRequest
## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
| **myInput** | **BigDecimal** |  | [optional] [default to null] |

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

",
  "markdown/Models/TestResponse.md": "# TestResponse
## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
| **messages** | [**List**](TestResponse_messages_inner.md) |  | [default to null] |

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

",
  "markdown/Models/TestResponse_messages_inner.md": "# TestResponse_messages_inner
## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
| **message** | **String** |  | [optional] [default to null] |
| **id** | **Integer** |  | [default to null] |

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

",
  "markdown/README.md": "# Documentation for Example API

<a name=\\"documentation-for-api-endpoints\\"></a>
## Documentation for API Endpoints

All URIs are relative to *http://localhost*

| Class | Method | HTTP request | Description |
|------------ | ------------- | ------------- | -------------|
| *DefaultApi* | [**anyRequestResponse**](Apis/DefaultApi.md#anyrequestresponse) | **PUT** /any-request-response |  |
*DefaultApi* | [**empty**](Apis/DefaultApi.md#empty) | **PUT** /empty-response |  |
*DefaultApi* | [**mediaTypes**](Apis/DefaultApi.md#mediatypes) | **POST** /different-media-type |  |
*DefaultApi* | [**operationOne**](Apis/DefaultApi.md#operationone) | **POST** /path/{pathParam} |  |
*DefaultApi* | [**withoutOperationIdDelete**](Apis/DefaultApi.md#withoutoperationiddelete) | **DELETE** /without-operation-id |  |


<a name=\\"documentation-for-models\\"></a>
## Documentation for Models

 - [ApiError](./Models/ApiError.md)
 - [TestRequest](./Models/TestRequest.md)
 - [TestResponse](./Models/TestResponse.md)
 - [TestResponse_messages_inner](./Models/TestResponse_messages_inner.md)


<a name=\\"documentation-for-authorization\\"></a>
## Documentation for Authorization

All endpoints do not require authorization.
",
}
`;
